[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/faction_card.gd" id="1"]

[node name="FactionCard" type="Control"]
custom_minimum_size = Vector2(300, 400)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2, 0.2, 0.2, 1)

[node name="GlowEffect" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.3)

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="EmblemLabel" type="Label" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "â˜€"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="NameLabel" type="Label" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Faction Name"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TaglineLabel" type="Label" parent="Content"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Faction tagline"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer2" type="Control" parent="Content"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_vertical = 3

[node name="SelectButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "SELECT"
